# resume-ai

./: .env.example  .gitignore  docker-compose.yml  start-dev.sh  start-prod.sh
backend/: .env.example  Dockerfile  pyproject.toml  seed_data.py
backend/analytics/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/analytics/migrations/: 0001_initial.py
backend/companies/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/companies/migrations/: 0001_initial.py  0002_initial.py
backend/core/: db_router.py  mongodb.py  permissions.py
backend/core/mixins/: response.py
backend/core/serializers/: response.py
backend/jobs/: models.py  serializers.py  urls.py  views.py
backend/jobs/migrations/: 0001_initial.py  0002_application_is_approved.py  0002_initial.py
backend/jobs/services/: matching_service.py
backend/resume_ai/: celery.py  urls.py
backend/resume_ai/settings/: __init__.py  base.py  dev.py  prod.py
backend/resumes/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/resumes/migrations/: 0001_initial.py  0002_initial.py  0003_resume_visibility.py
backend/resumes/mongo/: storage.py
backend/resumes/schemas/: resume.py
backend/resumes/services/: analyzer.py  parser.py
backend/shared/: exceptions.py  renderers.py
backend/users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: .env.example  Dockerfile  README.md  docker-compose.yml  jest.setup.js  next.config.js  nginx.conf  (+3 more)
(+54 files in other folders)
