[project]
name = "resumeai-api"
version = "0.1.0"
description = "Resume AI Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt[crypto]>=5.5.0",
    "drf-spectacular>=0.28.0",
    "psycopg2-binary>=2.9.10",
    "pymongo>=4.12.0",
    "gunicorn>=21.2.0",
    "mysqlclient>=2.2.3",
    "django-redis>=5.4.0",
    "django-cors-headers>=4.3.1",
    "pillow>=11.2.1",
]
